--- a/src/style.css
+++ b/src/style.css
@@ -31,12 +31,13 @@ input {
   border: 2px solid peachpuff;
   border-radius: 10px;
   padding: 12px;
+  transition: 200ms;
 }
 
 input:focus {
   border-radius: 15px;
   transform: translateY(-2px) scale(1.05);
-  transition: 0.2s;
+  transition: 200ms;
   outline: none;
 }
 
