Update styles things

--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Outfit&display=swap");
 
+html {
+  height: 100%;
+  display: flex;
+}
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Outfit", Roboto, Helvetica,
     Arial, sans-serif;
@@ -8,4 +13,29 @@ body {
   padding: 2rem;
   background-color: #252525;
   color: peachpuff;
+  text-align: center;
+  align-items: center;
+}
+
+h1 {
+  text-align: center;
+}
+
+input {
+  text-align: center;
+  font-family: Outfit;
+  width: 75%;
+  margin-top: 1.5rem;
+  background-color: #303030;
+  color: peachpuff;
+  border: 2px solid peachpuff;
+  border-radius: 10px;
+  padding: 12px;
+}
+
+input:focus {
+  border-radius: 15px;
+  transform: translateY(-2px) scale(1.05);
+  transition: 0.2s;
+  outline: none;
 }
